# Guitar-DSP-Platform

./: .gitignore  CMakeLists.txt  README.md  plan.md
cmake/: FetchImGui.cmake  FindRtAudio.cmake
include/app/: AppContext.h
include/audio/: AudioEngine.h  AudioRingBuffer.h  ParameterQueue.h
include/dsp/: AmpSimEffect.h  Biquad.h  CabinetEffect.h  ChorusEffect.h  CompressorEffect.h  DelayEffect.h  DelayLine.h  DspMath.h  Effect.h  EffectGraph.h  EqualizerEffect.h  Fft.h  GainEffect.h  GraphCommandQueue.h  NoiseGateEffect.h  OverdriveEffect.h  PartitionedConvolver.h  PeakLimiter.h  ReverbEffect.h  SmoothedValue.h  SyntheticIr.h  WavFile.h
include/preset/: Preset.h
presets/: Ambient.json  Blues.json  Clean.json  Crunch.json  Metal.json
src/: CMakeLists.txt  main.cpp
src/app/: AppContext.cpp  GuiApp.cpp
src/audio/: AudioEngine.cpp  ParameterQueue.cpp
src/dsp/: AmpSimEffect.cpp  Biquad.cpp  CabinetEffect.cpp  ChorusEffect.cpp  CompressorEffect.cpp  DelayEffect.cpp  DelayLine.cpp  EffectGraph.cpp  EqualizerEffect.cpp  Fft.cpp  GainEffect.cpp  GraphCommandQueue.cpp  NoiseGateEffect.cpp  OverdriveEffect.cpp  PartitionedConvolver.cpp  ReverbEffect.cpp  SmoothedValue.cpp  SyntheticIr.cpp  WavFile.cpp
src/preset/: Preset.cpp
tests/: CMakeLists.txt  WavWriter.h  amp_sim_test.cpp  cabinet_test.cpp  chorus_test.cpp  compressor_test.cpp  delay_test.cpp  equalizer_test.cpp  gain_graph_test.cpp  gain_smoothing_test.cpp  noise_gate_test.cpp  overdrive_test.cpp  phase11_test.cpp  preset_test.cpp  reverb_test.cpp  sine_to_wav_test.cpp
