function(add_dsp_test name)
    add_executable(${name} ${name}.cpp)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(${name} PRIVATE guitar_dsp_audio)
    add_test(NAME ${name} COMMAND ${name} ${ARGN})
endfunction()

add_dsp_test(sine_to_wav_test "${CMAKE_BINARY_DIR}/sine_wire.wav")
add_dsp_test(gain_graph_test "${CMAKE_BINARY_DIR}/gain_graph.wav")
add_dsp_test(gain_smoothing_test "${CMAKE_BINARY_DIR}/gain_smooth.wav")
add_dsp_test(noise_gate_test)
add_dsp_test(compressor_test)
add_dsp_test(overdrive_test)
add_dsp_test(equalizer_test)
add_dsp_test(amp_sim_test)
add_dsp_test(cabinet_test "${CMAKE_BINARY_DIR}/synthetic_cab.wav")
add_dsp_test(delay_test)
add_dsp_test(chorus_test)
add_dsp_test(reverb_test)
